--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "0.0.1",
   "description": "TLS canary static site",
   "lambci": {
-    "cmd": "pip install --user awscli && ./build.sh"
+    "cmd": "./build.sh"
   }
 }
